# okab

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
altair_saver_resvg/: __init__.py  _resvg.py
examples/: charts.py  make-examples.py
js/: Makefile  get-binaries.sh  index.js  package-lock.json  package.json
js/assets/: fonts
js/examples/: Makefile  example.vl.json
js/scripts/: get-node-addon
js/src/: args.js  compile.js  read.js
js/src/render/: index.js  png.js  svg.js
okab/: __init__.py  __main__.py  _okab.py  _resvg.py  _version.py
okab/saver/: __init__.py  _okab.py
