[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "okab"
dynamic = ["version"]
description = "pkg + resvg + vega + altair = static beauty"
readme = "README.md"
authors = [
    {name = "Daylin Morgan", email = "daylinmorgan@gmail.com"},
]
dependencies = [
    'altair >=4.2',
    'altair_saver >=0.5',
    'importlib-resources>=5.9.0; python_version < "3.9"',
]
requires-python = ">=3.7"
license = {text = "MIT"}

[project.scripts]
okab = "okab.__main__:main"

[project.optional-dependencies]

[tool.setuptools]
packages = ["okab","okab.vega"]

[tool.setuptools.dynamic]
version = { attr = "okab._version.__version__" }

[tool.setuptools.package-data]
okab = ["vega/*"]

[tool.pdm]
version = { source = "file", path = "okab/_version.py" }

[tool.pdm.dev-dependencies]
dev = [
    "black>=22.6.0",
    "flake8>=5.0.4",
    "mypy>=0.971",
    "altair>=4.2.0",
    "altair-saver>=0.5.0",
    "build>=0.8.0",
    "vega-datasets>=0.9.0",
]

[tool.mypy]
exclude = ["build/","examples"]
