[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "okab"
dynamic = ["version"]
description = "altair + okab = static beauty"
readme = "README.md"
authors = [{ name = "Daylin Morgan", email = "daylinmorgan@gmail.com" }]
dependencies = ['importlib-resources>=5.9.0; python_version < "3.9"']
requires-python = ">=3.7"
license = { text = "MIT" }

[project.scripts]
okab = "okab.__main__:main"

[project.optional-dependencies]
dev = [
    "black>=22.6.0",
    "flake8>=5.0.4",
    "mypy>=0.971",
    "altair>=4.2.0",
    "altair-saver>=0.5.0",
    "build>=0.8.0",
    "vega-datasets>=0.9.0",
    "setuptools-scm>=7.0.5",
    "wheel>=0.37.1",
]

[tool.setuptools]
packages = ["okab", "okab.saver"]
include-package-data = false
package-data = { okab = ["bin/**/*"] }

[tool.setuptools_scm]
write_to = "okab/_version.py"

[tool.mypy]
exclude = ["build/", "examples", "venv", "scripts", "dist"]
ignore_missing_imports = true
